# guandan_qt

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
resources/: cards.qrc
src/: AiPlayer.cpp  AiPlayer.h  Card.cpp  Card.h  GameEngine.cpp  GameEngine.h  HandAnalyzer.cpp  HandAnalyzer.h  MainWindow.cpp  MainWindow.h  TableWidget.cpp  TableWidget.h  main.cpp
tests/: rules_tests.cpp
tools/: generate_app_icon.py
